# react-native-multiple-image-picker

./: README.md  USAGE_EXAMPLE.md  package.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/java/com/margelo/nitro/multipleimagepicker/: MultipleImagePickerImp.kt
ios/: HybridMultipleImagePicker+Camera.swift  HybridMultipleImagePicker+Config.swift  HybridMultipleImagePicker+Crop.swift  HybridMultipleImagePicker+Result.swift  HybridMultipleImagePicker.swift
src/types/: crop.ts
